recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:4: error: not found: value levels
		if (levels > 0 ) {
                    ^