recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.code
def dragon(order:Int, x:Double, y:Double, z:Double, t:Double) {
	var u = (x + z)/2 + (t - y)/2;
	var v = (y + t)/2 - (z - x)/2;
		if (levels > 0 ) {
			dragon(order-1,x,y,u,v);
			dragon(order-1,u,v,z,t);
		} else {
			setPos(x,y);
			allerVers(z,t);
		}
}
